modification/suppression/ajout des images de la galerie

--- a/src/CoreBundle/Resources/views/Galery/edit.html.twig
+++ b/src/CoreBundle/Resources/views/Galery/edit.html.twig
@@ -15,13 +15,19 @@
                             <img src="{{ asset('uploads/images/' ~ image.url) }}" alt="{{ image.alt }}" width="100%"><br>
                         </p>
                         <p class="col-sm-3">
-                            <a href="#" class="btn btn-danger">Supprimer l'image</a>
+                            <a href="{{ path('delete_image', {'id' : image.id}) }}" class="btn btn-danger">Supprimer l'image</a>
                         </p>
+                        <div class="col-sm-12">
+                            <label for="corebundle_galerie_images_{{ loop.index - 1 }}_alt">text alternatif :</label>
+                            <input type="text" id="corebundle_galerie_images_{{ loop.index - 1 }}_alt" name="corebundle_galerie[images][{{ loop.index - 1 }}][alt]" class="form-control" value="{{ image.alt }}"/><br>
+                            <hr>
+                        </div>
                     </div>
                 {% endfor %}
             </div>
             <div>
-                <div id="corebundle_galerie_images" data-prototype="<div><label class=&quot;required&quot;>__name__label__</label><div id=&quot;corebundle_galerie_images___name__&quot;><div><label for=&quot;corebundle_galerie_images___name___file&quot; class=&quot;required&quot;>Envoyer des images :</label><input type=&quot;file&quot; id=&quot;corebundle_galerie_images___name___file&quot; name=&quot;corebundle_galerie[images][__name__][file]&quot; required=&quot;required&quot; class=&quot;form-control&quot; /></div><div><label for=&quot;corebundle_galerie_images___name___alt&quot;>text alternatif :</label><input type=&quot;text&quot; id=&quot;corebundle_galerie_images___name___alt&quot; name=&quot;corebundle_galerie[images][__name__][alt]&quot; class=&quot;form-control&quot; /></div></div></div>"></div>
+                <h2>Ajout de nouvelles images</h2>
+                <div id="corebundle_galerie_images" data-prototype="<div><label class=&quot;required&quot;>__name__label__</label><div id=&quot;corebundle_galerie_images___name__&quot;><div><label for=&quot;corebundle_galerie_images___name___file&quot; class=&quot;required&quot;>Envoyer des images :</label><input type=&quot;file&quot; id=&quot;corebundle_galerie_images___name___file&quot; name=&quot;corebundle_galerie[images][__name__][file]&quot; required=&quot;required&quot; class=&quot;form-control&quot; multiple=&quot;multiple&quot; /></div><div><label for=&quot;corebundle_galerie_images___name___alt&quot;>text alternatif :</label><input type=&quot;text&quot; id=&quot;corebundle_galerie_images___name___alt&quot; name=&quot;corebundle_galerie[images][__name__][alt]&quot; class=&quot;form-control&quot; /></div></div></div>"></div>
                 <a href="#" id="add_image" class="btn btn-success">Ajouter une image</a><br><br>
             </div>
             {{ form_widget(form._token) }}
