--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -74,9 +74,8 @@
                             <li><a href="#">Mariages</a></li>
                             <li><a href="#">Reportages</a></li>
                             <li><a href="#">Formations</a></li>
-                            <li><a href="#">A Propos</a></li>
                             <li><a href="https://lucileortega.wordpress.com/" target="new">Le Blog</a></li>
-                            <li><a href="#">Liens</a></li>
+                            <li><a href="#">Partenaires</a></li>
                         </ul>
                     </nav>
                 {% endblock %}
