--- a/src/CoreBundle/Resources/views/Galery/view.html.twig
+++ b/src/CoreBundle/Resources/views/Galery/view.html.twig
@@ -19,5 +19,8 @@
                 {% endif %}
             </ul>
         </div>
+        <div>
+            {{ galerie.description }}
+        </div>
     </section>
 {% endblock %}
