--- a/src/CoreBundle/Resources/views/Galery/add.html.twig
+++ b/src/CoreBundle/Resources/views/Galery/add.html.twig
@@ -8,6 +8,7 @@
             <div>{{ form_row(form.title) }}<br></div>
             <div>{{ form_row(form.description) }}<br></div>
             <div>{{ form_row(form.private) }}<br></div>
+            <div>{{ form_row(form.tags) }}<br></div>
             <div>
                 {{ form_row(form.images) }}
                 <a href="#" id="add_image" class="btn btn-success">Ajouter une image</a><br><br>
