--- a/src/CoreBundle/Resources/views/Default/add.html.twig
+++ b/src/CoreBundle/Resources/views/Default/add.html.twig
@@ -5,6 +5,7 @@
         <form action="{{ path('add_page') }}" method="post">
             {{ form_start(form) }}
             {{ form_widget(form) }}
+            {{ form_end(form) }}
         </form>
     </section>
 {% endblock %}
